tests/ui/traits/new-solver/cyclic-type.stderr
error[E0308]: mismatched types
  --> $DIR/cyclic-type.rs:5:9
   |
LL |     x = Box::new(x);
   |         ^^^^^^^^^^^ cyclic type of infinite size
   |
help: consider unboxing the value
   |
LL |     x = *Box::new(x);
   |         +

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
